unpackaged/main/default/objects/Lead/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <inlineHelpText>Identify event when lead source is an event</inlineHelpText>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>