unpackaged/main/default/objects/Lead/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Procurement / Purchasing Officer</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Microbiologist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Manager</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Nurse</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Support</fullName>
            </value>
            <value>
                <fullName>Finance Officer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Inventory Officer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>